added character information

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <section>
         <h2>Sourov Chandra Barmon</h2>
         <p>TPI, Thakurgaon</p>
-        
+        <p>A very honest and good person.</p>
     </section>
 </body>
 </html>
