--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <h2>Sourov Chandra Barmon</h2>
         <p>TPI, Thakurgaon</p>
         <p>A very honest and good person.</p>
+        <p>Hobby: Playing cricket.</p>
     </section>
 </body>
 </html>
